apps/arr/prowlarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
