apps/arr/prowlarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  rules:
    - host: prowlarr.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: prowlarr
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.mobrockers.com
